--- a/pag.css
+++ b/pag.css
@@ -17,7 +17,7 @@ body {
     color: white;
     text-align: center;
   }
-  #grid {
+  #grid div{
     display: flex;
     grid-template-columns: auto;
     text-align: center;
